--- a/css/style.css
+++ b/css/style.css
@@ -12,26 +12,7 @@ h1{
 	font-weight: bold;
 }
 
-
-.active{
-	background: white;
-    text-transform: uppercase;
-	text-align: center;
-}
-
-.active a{
-	text-decoration: none;;
-}
-
 /*Style the images*/
-img{
-    height: 200px;
-    width:auto;
-    border: 3px solid blue;
-    padding: 25px;
-    border-radius: 10px;
-    margin: 10px;
-}
 
 /*Make the h2 heading match h1*/
 h2{
@@ -66,5 +47,5 @@ nav li{
 
 
 /*Added this so the links stay the same color*/
-a:visited{color:#0000FF}
+/* a:visited{color:#0000FF} */
 
